--- a/bingo/src/app.html
+++ b/bingo/src/app.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="utf-8" />
-	<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+	<link rel="icon" href="/img/favicon.png" />
 	<meta name="viewport" content="width=device-width" />
 	%sveltekit.head%
 	<link rel="stylesheet" href="/css/style.css">
@@ -19,3 +19,5 @@
 </body>
 
 </html>
+
+<!-- commit -m "Creating an img folder to organize the images" -->
