--- a/bingo/src/app.html
+++ b/bingo/src/app.html
@@ -8,6 +8,19 @@
 	%sveltekit.head%
 	<link rel="stylesheet" href="/css/style.css">
 	<link rel="stylesheet" href="/css/bootstrap.min.css">
+	<style>
+		*{
+			margin: 0;
+			padding: 0;
+		}
+		html, body{
+			height: 100%;
+		}
+		body{
+			display: flex;
+			flex-direction: column;
+		}
+	</style>
 </head>
 
 <body data-sveltekit-preload-data="hover">
