add globals css

--- a/bingo/src/app.html
+++ b/bingo/src/app.html
@@ -6,21 +6,8 @@
 	<link rel="icon" href="/img/favicon.png" />
 	<meta name="viewport" content="width=device-width" />
 	%sveltekit.head%
-	<link rel="stylesheet" href="/css/style.css">
 	<link rel="stylesheet" href="/css/bootstrap.min.css">
-	<style>
-		*{
-			margin: 0;
-			padding: 0;
-		}
-		html, body{
-			height: 100%;
-		}
-		body{
-			display: flex;
-			flex-direction: column;
-		}
-	</style>
+	<link rel="stylesheet" href="/css/globals.css">
 </head>
 
 <body data-sveltekit-preload-data="hover">
